# llmizeoff

./: .gitignore  README.md  ecosystem.config.cjs  package-lock.json  package.json  server.js  tsconfig.json
.github/workflows/: ci.yml
android/: README.md  build.gradle
android/src/main/cpp/: CMakeLists.txt  llmizeoff_jni.cpp  offllama_jni.cpp
android/src/main/java/com/llmizeoff/: LlmizeOffClient.kt  LlmizeOffEngine.kt  ModelDownloader.kt
android/src/main/java/com/offllama/: ModelDownloader.kt  OffLlamaClient.kt  OffLlamaEngine.kt
src/: cli.ts  client.ts  downloader.ts  engine.ts  index.ts  nano-extractor.ts  react-native.ts  server.ts  startup.js  types.ts
